--- a/ImplantConsole/ImplantConsole.csproj
+++ b/ImplantConsole/ImplantConsole.csproj
@@ -33,8 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Jurassic-mono">
-      <HintPath>..\Lib\Jurassic-mono.dll</HintPath>
+    <Reference Include="Jurassic">
+      <HintPath>..\Lib\Jurassic.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
