the ImplantEventType enum is not longer used.  ImplantEvent types are completely differentiated by subclasses now.  ImplantEventType enum is still used by some utility methods for the time being.

--- a/LPToolKit Library/LPToolKit Library.csproj
+++ b/LPToolKit Library/LPToolKit Library.csproj
@@ -72,6 +72,10 @@
     <Compile Include="Core\Tasks\IKernelTask.cs" />
     <Compile Include="Core\Tasks\ImplantAction.cs" />
     <Compile Include="Core\Kernel.cs" />
+    <Compile Include="Core\Tasks\ImplantEvents\GuiImplantEvent.cs" />
+    <Compile Include="Core\Tasks\ImplantEvents\NoteImplantEvent.cs" />
+    <Compile Include="Core\Tasks\ImplantEvents\KnobImplantEvent.cs" />
+    <Compile Include="Core\Tasks\ImplantEvents\PadImplantEvent.cs" />
     <Compile Include="Core\Tasks\ImplantEvents\Clock96ImplantEvent.cs" />
     <Compile Include="Core\Tasks\ImplantEvents\DeviceChangeImplantEvent.cs" />
     <Compile Include="Core\Tasks\ImplantEvents\ModeChangeImplantEvent.cs" />
