MIDI output syncing implemented, but a the MIDI device currently must be dedicated to syncing only.

--- a/LPToolKit Library/LPToolKit Library.csproj
+++ b/LPToolKit Library/LPToolKit Library.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Logs\MidiLog.cs" />
     <Compile Include="Logs\OscLog.cs" />
     <Compile Include="MIDI\Events.cs" />
+    <Compile Include="MIDI\Hardware\MidiClockOutputHardwareInterface.cs" />
     <Compile Include="MIDI\Hardware\MidiHardwareTypes.cs" />
     <Compile Include="MIDI\Pads\Mappers\IButtonXYMapper.cs" />
     <Compile Include="MIDI\Pads\Mappers\IButtonColorMapper.cs" />
