1.  Renamed RealTimeQueue to PriorityQueue since this is really a queue that orders task by the latest possible due date, not the exact time they must be run 2.  Added RealTimeSync class that reliably guarantees a thread will block until a precise millisecond, to prepare for an actual RealTimeQueue

--- a/LPToolKit Library/LPToolKit Library.csproj
+++ b/LPToolKit Library/LPToolKit Library.csproj
@@ -190,11 +190,12 @@
     <Compile Include="Util\Assert.cs" />
     <Compile Include="Util\FilePath.cs" />
     <Compile Include="Util\LPConsole.cs" />
+    <Compile Include="Util\Threading\RealTimeSync.cs" />
     <Compile Include="Util\Threading\CpuCore.cs" />
     <Compile Include="Util\LagTracker.cs" />
     <Compile Include="Util\Collections\LockFreeQueue.cs" />
     <Compile Include="Util\Collections\OutputQueue.cs" />
-    <Compile Include="Util\Collections\RealTimeQueue.cs" />
+    <Compile Include="Util\Collections\PriorityQueue.cs" />
     <Compile Include="Util\Threading\SingleThread.cs" />
     <Compile Include="Util\Threading\ThreadManager.cs" />
     <Compile Include="Util\AppSettingsManager.cs" />
